Revamp CV and resume data, add work_short section
Updated resume data in resume.json with new education, work, projects, publications, and skills. Added work_short section and corresponding Liquid template for concise work experience display. Improved CV and about page layouts to support work_short, enhanced project and publication rendering, and updated project markdown files for publication details. Disabled search in config and updated profile image and CV PDF.

--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ repo_trophies:
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: False
 socials_in_search: true
 posts_in_search: true
 bib_search: true
@@ -642,6 +642,7 @@ jekyll_get_json:
 jsonresume:
   - basics
   - work
+  - work_short
   - education
   - publications
   - projects
